--- a/E_Cake_fe/src/index.css
+++ b/E_Cake_fe/src/index.css
@@ -1,1 +1,7 @@
 @import "tailwindcss";
+
+@theme {
+    --font-inter: "Inter", ui-sans-serif, system-ui, sans-serif;
+
+    --font-sans: var(--font-inter);
+}
