edit product, product filter

--- a/E_Cake_fe/src/index.css
+++ b/E_Cake_fe/src/index.css
@@ -5,3 +5,10 @@
 
     --font-sans: var(--font-inter);
 }
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+.no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
