--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -26,3 +26,6 @@ body {
     background: #fc4126 !important;
     opacity: 1;
 }
+
+.no-scrollbar::-webkit-scrollbar { display: none; }
+.no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
